--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ build/main.o
 /build
 NanoWii.dol
 NanoWii.elf
+apps/NanoWii/boot.dol
+apps/NanoWii/icon.png
+apps/NanoWii/meta.xml
+.vscode/launch.json
